bk_ida/gccida/c0/k6_fpu_unit_blockage
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24845:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 24655, "k6_fpu_unit_blockage"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24845:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 24655, "k6_fpu_unit_blockage"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24933:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = mult_operator( recog_data_0.operand[3], SFmode) != 0; 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24938:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || mult_operator( recog_data_0.operand[3], SFmode) ) 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24940:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || !mult_operator( recog_data_0.operand[3], SFmode) ) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24952:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = mult_operator( recog_data_0.operand[3], XFmode) != 0; 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24956:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = mult_operator( recog_data_0.operand[3], TFmode) != 0; 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24966:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], SFmode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:24981:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( which_alternative == 2 || !mult_operator( recog_data_0.operand[3], SFmode) ) 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:25000:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], DFmode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:25015:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( which_alternative == 2 || !mult_operator( recog_data_0.operand[3], DFmode) ) 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:25036:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], XFmode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/insn-attrtab.c:25057:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], TFmode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_blockage/src/obj/insn-attrtab.o] Error 1
